Do some easthetic improvements on one graph

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "from plotnine import *\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "import textwrap"
    ]
   },
   {
@@ -33,7 +34,8 @@
     "# Convert amounts to numbers, dates to a date type, and add column for year\n",
     "df[\"Amount\"] = df[\"Amount\"].replace(\"[$,]\", \"\", regex=True).astype(float)\n",
     "df['Date'] = pd.to_datetime(df['Date'])\n",
-    "df[\"year\"] = pd.DatetimeIndex(df['Date']).year"
+    "df[\"year\"] = pd.DatetimeIndex(df['Date']).year\n",
+    "df[\"Focus Area\"] = df[\"Focus Area\"].apply(lambda x: textwrap.fill(x, 15))"
    ]
   },
   {
@@ -84,14 +86,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = (ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
-    "     geom_bar(stat=\"identity\") +\n",
-    "     coord_flip() +\n",
-    "     ylab(\"Total grants (Million $)\") +\n",
-    "     ggtitle(f\"Openphil funding from start of 2021 until {date.today()} by Focus Area\")\n",
+    "base_graph = (ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
+    "              geom_bar(stat=\"identity\", fill=\"#0c869b\") +\n",
+    "              coord_flip() +\n",
+    "              ylab(\"Total grants (Million $)\") +\n",
+    "              ggtitle(f\"Openphil funding from start of 2021 until {date.today()} by Focus Area\") +\n",
+    "              theme(aspect_ratio = 1.5)\n",
     ")\n",
     "\n",
-    "g"
+    "standard_graph = (base_graph + \n",
+    "                  geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 1) +\n",
+    "                  scale_y_continuous(expand=(0,0,0.2,0))\n",
+    ")\n",
+    "\n",
+    "standard_graph"
    ]
   },
   {
@@ -100,9 +108,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_log = g + scale_y_log10() + ylab(\"Total grants (Million $, log scale)\")\n",
+    "log_graph = (base_graph + \n",
+    "             scale_y_log10() +\n",
+    "             geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5) +\n",
+    "             scale_y_continuous(expand=(0,0,0.15,0)) +\n",
+    "             ylab(\"Total grants (Million $, log scale)\") +\n",
+    "             theme(aspect_ratio = 1.5)\n",
+    ")\n",
     "\n",
-    "g_log"
+    "log_graph"
    ]
   }
  ],
