Test github workflow

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -118,6 +118,16 @@
     "\n",
     "log_graph"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"2021-now-graph-per-cause-area\"\n",
+    "standard_graph.save(f'{name}.png')"
+   ]
   }
  ],
  "metadata": {
