Attempt one more way of committing pngs

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -126,7 +126,7 @@
    "outputs": [],
    "source": [
     "name = \"2021-now-graph-per-cause-area\"\n",
-    "standard_graph.save(f'{name}.png')"
+    "standard_graph.save(f'pngs/{name}.png')"
    ]
   }
  ],
