--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -9,7 +9,8 @@
     "import pandas as pd\n",
     "from plotnine import *\n",
     "from datetime import date\n",
-    "import textwrap"
+    "import textwrap\n",
+    "import os"
    ]
   },
   {
@@ -125,6 +126,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "os.makedirs(\"pngs\")\n",
     "name = \"2021-now-graph-per-cause-area\"\n",
     "standard_graph.save(f'pngs/{name}.png')"
    ]
