Change jupyter directory creation to form that works even if directory already exists

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -10,7 +10,7 @@
     "from plotnine import *\n",
     "from datetime import date\n",
     "import textwrap\n",
-    "import os"
+    "from pathlib import Path"
    ]
   },
   {
@@ -127,7 +127,7 @@
    "outputs": [],
    "source": [
     "import os\n",
-    "os.makedirs(\"pngs\")\n",
+    "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
     "name = \"2021-now-graph-per-cause-area\"\n",
     "standard_graph.save(f'pngs/{name}.png')"
    ]
