Produce pngs from all notebooks

--- a/alltime-cause-areas-per-year.ipynb
+++ b/alltime-cause-areas-per-year.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "from plotnine import *\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from pathlib import Path"
    ]
   },
   {
@@ -107,6 +108,17 @@
     ")\n",
     "\n",
     "g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
+    "name = \"alltime-cause-areas-per-year\"\n",
+    "g.save(f'pngs/{name}.png')"
    ]
   }
  ],
