--- a/alltime-graph-cause-areas.ipynb
+++ b/alltime-graph-cause-areas.ipynb
@@ -108,7 +108,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
+    "name = \"alltime-graph-cause-areas\"\n",
+    "g.save(f'pngs/{name}.png')\n",
+    "g_log.save(f'pngs/{name}_log_scale.png')"
+   ]
   }
  ],
  "metadata": {
