--- a/yearly-graph-per-cause-area.ipynb
+++ b/yearly-graph-per-cause-area.ipynb
@@ -100,6 +100,18 @@
     "\n",
     "g_log"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
+    "name = \"alltime-graph-cause-areas\"\n",
+    "g.save(f'pngs/{name}.png')\n",
+    "g_log.save(f'pngs/{name}_log_scale.png')"
+   ]
   }
  ],
  "metadata": {
