--- a/alltime-graph-cause-areas.ipynb
+++ b/alltime-graph-cause-areas.ipynb
@@ -8,7 +8,8 @@
    "source": [
     "import pandas as pd\n",
     "from plotnine import *\n",
-    "from datetime import date"
+    "from datetime import date\n",
+    "from pathlib import Path"
    ]
   },
   {
