--- a/yearly-graph-per-cause-area.ipynb
+++ b/yearly-graph-per-cause-area.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "from plotnine import *"
+    "from plotnine import *\n",
+    "from pathlib import Path"
    ]
   },
   {
