Refactoring, changing colors, adding amounts as labels

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -87,17 +87,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_graph = (ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
-    "              geom_bar(stat=\"identity\", fill=\"#0c869b\") +\n",
-    "              coord_flip() +\n",
-    "              ylab(\"Total grants (Million $)\") +\n",
-    "              ggtitle(f\"Openphil funding from start of 2021 until {date.today()} by Focus Area\") +\n",
-    "              theme(aspect_ratio = 1.5)\n",
-    ")\n",
-    "\n",
-    "standard_graph = (base_graph + \n",
-    "                  geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 1) +\n",
-    "                  scale_y_continuous(expand=(0,0,0.2,0))\n",
+    "base_graph = (\n",
+    "    ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
+    "    geom_bar(stat=\"identity\", fill=\"#0c869b\") +\n",
+    "    coord_flip() +\n",
+    "    ylab(\"Total grants (Million $)\") +\n",
+    "    ggtitle(f\"Openphil funding from start of 2021 until {date.today()} by Focus Area\") +\n",
+    "    theme(aspect_ratio = 1.5)\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "standard_graph = (\n",
+    "    base_graph + \n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 1) +\n",
+    "    scale_y_continuous(expand=(0,0,0.2,0))\n",
     ")\n",
     "\n",
     "standard_graph"
@@ -109,12 +118,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "log_graph = (base_graph + \n",
-    "             scale_y_log10() +\n",
-    "             geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5) +\n",
-    "             scale_y_continuous(expand=(0,0,0.15,0)) +\n",
-    "             ylab(\"Total grants (Million $, log scale)\") +\n",
-    "             theme(aspect_ratio = 1.5)\n",
+    "log_graph = (\n",
+    "    base_graph + \n",
+    "    scale_y_log10(expand=(0,0,0.15,0)) +\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5) +\n",
+    "    ylab(\"Total grants (Million $, log scale)\") +\n",
+    "    theme(aspect_ratio = 1.5)\n",
     ")\n",
     "\n",
     "log_graph"
