--- a/alltime-cause-areas-per-year.ipynb
+++ b/alltime-cause-areas-per-year.ipynb
@@ -99,15 +99,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = (ggplot(df, aes(x=\"year\", y=\"amount_millions\")) +\n",
-    "     geom_bar(stat='identity') +\n",
-    "     facet_wrap('Focus Area') +\n",
-    "     ylab(\"Total grants (Million $)\") +\n",
-    "     ggtitle(f\"Openphil funding by Focus Area, 6 largest focus areas\") +\n",
-    "     theme(figure_size=(16, 8))\n",
+    "graph = (\n",
+    "    ggplot(df, aes(x=\"year\", y=\"amount_millions\")) +\n",
+    "    geom_bar(stat='identity', fill=\"#0c869b\") + \n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', va = \"bottom\", format_string = \"{:.1f}\") +\n",
+    "    facet_wrap('Focus Area') +\n",
+    "    ylab(\"Total grants (Million $)\") +\n",
+    "    ggtitle(f\"Openphil funding by Focus Area, 6 largest focus areas\") +\n",
+    "    theme(figure_size=(15, 8)) +\n",
+    "    scale_y_continuous(expand=(0,0,0.1,0)) \n",
     ")\n",
     "\n",
-    "g"
+    "graph"
    ]
   },
   {
@@ -118,7 +121,7 @@
    "source": [
     "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
     "name = \"alltime-cause-areas-per-year\"\n",
-    "g.save(f'pngs/{name}.png')"
+    "graph.save(f'pngs/{name}.png')"
    ]
   }
  ],
