--- a/alltime-graph-cause-areas.ipynb
+++ b/alltime-graph-cause-areas.ipynb
@@ -82,15 +82,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g = (ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
-    "     geom_col() +\n",
+    "base_graph = (\n",
+    "     ggplot(df, aes(x=\"Focus Area\", y=\"amount_millions\")) + \n",
+    "     geom_bar(stat=\"identity\", fill=\"#0c869b\") +\n",
     "     coord_flip() +\n",
     "     ylab(\"Total grants (Million $)\") +\n",
-    "     ggtitle(f\"Openphil funding by Focus Area, up until {date.today()}\") +\n",
-    "     theme(figure_size=(16, 8))\n",
-    ")\n",
-    "\n",
-    "g"
+    "     ggtitle(f\"Openphil funding by Focus Area, up until {date.today()}\")\n",
+    ")"
    ]
   },
   {
@@ -99,9 +97,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "g_log = g + scale_y_log10() + ylab(\"Total grants (Million $, log scale)\")\n",
+    "normal_graph = (\n",
+    "    base_graph + \n",
+    "    theme(aspect_ratio = 1) + \n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 1) +\n",
+    "    scale_y_continuous(expand=(0,0,0.2,0)) \n",
+    ")\n",
     "\n",
-    "g_log"
+    "normal_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_graph = (\n",
+    "    base_graph +\n",
+    "    scale_y_log10(expand=(0,0,0.15,0)) + \n",
+    "    ylab(\"Total grants (Million $, log scale)\") + \n",
+    "    theme(aspect_ratio = 1) + \n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5)\n",
+    ")\n",
+    "\n",
+    "log_graph"
    ]
   },
   {
@@ -112,8 +132,8 @@
    "source": [
     "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
     "name = \"alltime-graph-cause-areas\"\n",
-    "g.save(f'pngs/{name}.png')\n",
-    "g_log.save(f'pngs/{name}_log_scale.png')"
+    "normal_graph.save(f'pngs/{name}.png')\n",
+    "log_graph.save(f'pngs/{name}_log_scale.png')"
    ]
   }
  ],
