Fix issues with label placements, add text to one more graph

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
     "log_graph = (\n",
     "    base_graph + \n",
     "    scale_y_log10(expand=(0,0,0.15,0)) +\n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5) +\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\") +\n",
     "    ylab(\"Total grants (Million $, log scale)\") +\n",
     "    theme(aspect_ratio = 1.5)\n",
     ")\n",
