--- a/alltime-cause-areas-per-year.ipynb
+++ b/alltime-cause-areas-per-year.ipynb
@@ -102,7 +102,7 @@
     "graph = (\n",
     "    ggplot(df, aes(x=\"year\", y=\"amount_millions\")) +\n",
     "    geom_bar(stat='identity', fill=\"#0c869b\") + \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', va = \"bottom\", format_string = \"{:.1f}\") +\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', va = \"bottom\", format_string = \"{:.1f}\", size=8) +\n",
     "    facet_wrap('Focus Area') +\n",
     "    ylab(\"Total grants (Million $)\") +\n",
     "    ggtitle(f\"Openphil funding by Focus Area, 6 largest focus areas\") +\n",
