--- a/alltime-graph-cause-areas.ipynb
+++ b/alltime-graph-cause-areas.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
     "    scale_y_log10(expand=(0,0,0.15,0)) + \n",
     "    ylab(\"Total grants (Million $, log scale)\") + \n",
     "    theme(aspect_ratio = 1) + \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5)\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\")\n",
     ")\n",
     "\n",
     "log_graph"
