--- a/yearly-graph-per-cause-area.ipynb
+++ b/yearly-graph-per-cause-area.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
     "    scale_y_log10(expand=(0,0,0.2,0)) + \n",
     "    ylab(\"Total grants (Million $, log scale)\") +\n",
     "    theme(aspect_ratio = 2) +    \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 0.5)\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\")\n",
     ")\n",
     "\n",
     "log_graph"
@@ -129,7 +129,7 @@
    "outputs": [],
    "source": [
     "Path(\"pngs\").mkdir(parents=True, exist_ok=True)\n",
-    "name = \"alltime-graph-cause-areas\"\n",
+    "name = f\"{year}-graph-per-cause-area\"\n",
     "normal_graph.save(f'pngs/{name}.png')\n",
     "log_graph.save(f'pngs/{name}_log_scale.png')"
    ]
