Improve log graphs, fix mistaken filtering on graph of all time

--- a/2021-now-graph-per-cause-area.ipynb
+++ b/2021-now-graph-per-cause-area.ipynb
@@ -120,9 +120,10 @@
    "source": [
     "log_graph = (\n",
     "    base_graph + \n",
-    "    scale_y_log10(expand=(0,0,0.15,0)) +\n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\") +\n",
-    "    ylab(\"Total grants (Million $, log scale)\") +\n",
+    "    aes(y = \"Amount\") +\n",
+    "    scale_y_log10() +\n",
+    "    geom_text(aes(label=\"Amount\"), color = '#ffffff', ha = \"right\", format_string = \"{:,.0f}\", nudge_y = -0.1) +\n",
+    "    ylab(\"Total grants ($, log scale)\") +\n",
     "    theme(aspect_ratio = 1.5)\n",
     ")\n",
     "\n",
