--- a/alltime-cause-areas-per-year.ipynb
+++ b/alltime-cause-areas-per-year.ipynb
@@ -88,7 +88,13 @@
    "outputs": [],
    "source": [
     "# Make columns categorical in reasonable order for nicer plotting\n",
-    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=largest_focus_areas, ordered=True)\n",
+    "focus_areas = (df.groupby([\"Focus Area\"])[\"Amount\"]\n",
+    "                .sum()\n",
+    "                .reset_index()\n",
+    "                .sort_values(\"Amount\", ignore_index=True)\n",
+    "                [\"Focus Area\"]\n",
+    ")\n",
+    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=focus_areas, ordered=True)\n",
     "df['year'] = pd.Categorical(df[\"year\"], ordered=True)\n",
     "df = df.sort_values('year')"
    ]
