--- a/alltime-graph-cause-areas.ipynb
+++ b/alltime-graph-cause-areas.ipynb
@@ -39,12 +39,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Sum amounts per Focus Area\n",
-    "df = (df.groupby([\"Focus Area\", \"year\"])[\"Amount\"]\n",
+    "df = (df.groupby([\"Focus Area\"])[\"Amount\"]\n",
     "        .sum().reset_index()\n",
     "        .sort_values(\"Amount\").reset_index(drop=True)\n",
     ")\n",
@@ -55,19 +55,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Make columns categorical in reasonable order for nicer plotting\n",
-    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=pd.unique(df[\"Focus Area\"]), ordered=True)\n",
-    "df['year'] = pd.Categorical(df[\"year\"], ordered=True)\n",
-    "df = df.sort_values('year')"
+    "focus_areas = (df.groupby([\"Focus Area\"])[\"Amount\"]\n",
+    "                .sum()\n",
+    "                .reset_index()\n",
+    "                .sort_values(\"Amount\", ignore_index=True)\n",
+    "                [\"Focus Area\"]\n",
+    ")\n",
+    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=focus_areas, ordered=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +93,7 @@
     "normal_graph = (\n",
     "    base_graph + \n",
     "    theme(aspect_ratio = 1) + \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 1) +\n",
+    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\", nudge_y = 5) +\n",
     "    scale_y_continuous(expand=(0,0,0.2,0)) \n",
     ")\n",
     "\n",
@@ -104,10 +108,11 @@
    "source": [
     "log_graph = (\n",
     "    base_graph +\n",
-    "    scale_y_log10(expand=(0,0,0.15,0)) + \n",
-    "    ylab(\"Total grants (Million $, log scale)\") + \n",
+    "    aes(y=\"Amount\") +\n",
+    "    scale_y_log10() + \n",
+    "    ylab(\"Total grants ($, log scale)\") + \n",
     "    theme(aspect_ratio = 1) + \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\")\n",
+    "    geom_text(aes(label=\"Amount\"), color = '#ffffff', ha = \"right\", format_string = \"{:,.0f}\", nudge_y = -0.1)\n",
     ")\n",
     "\n",
     "log_graph"
