--- a/yearly-graph-per-cause-area.ipynb
+++ b/yearly-graph-per-cause-area.ipynb
@@ -70,7 +70,14 @@
    "outputs": [],
    "source": [
     "# Make columns categorical in reasonable order for nicer plotting\n",
-    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=pd.unique(df[\"Focus Area\"]), ordered=True)\n",
+    "# Make columns categorical in reasonable order for nicer plotting\n",
+    "focus_areas = (df.groupby([\"Focus Area\"])[\"Amount\"]\n",
+    "                .sum()\n",
+    "                .reset_index()\n",
+    "                .sort_values(\"Amount\", ignore_index=True)\n",
+    "                [\"Focus Area\"]\n",
+    ")\n",
+    "df['Focus Area'] = pd.Categorical(df[\"Focus Area\"], categories=focus_areas, ordered=True)\n",
     "df['year'] = pd.Categorical(df[\"year\"], ordered=True)\n",
     "df = df.sort_values('year')"
    ]
@@ -113,10 +120,11 @@
    "source": [
     "log_graph = (\n",
     "    base_graph + \n",
-    "    scale_y_log10(expand=(0,0,0.2,0)) + \n",
-    "    ylab(\"Total grants (Million $, log scale)\") +\n",
+    "    aes(y=\"Amount\") +\n",
+    "    scale_y_log10() + \n",
+    "    ylab(\"Total grants ($, log scale)\") +\n",
     "    theme(aspect_ratio = 2) +    \n",
-    "    geom_text(aes(label=\"amount_millions\"), color = '#555555', ha = \"left\", format_string = \"{:.1f}\")\n",
+    "    geom_text(aes(label=\"Amount\"), color = '#ffffff', ha = \"right\", format_string = \"{:,.0f}\", nudge_y = -0.1)\n",
     ")\n",
     "\n",
     "log_graph"
